--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,24 @@ ul, ol {
   Buttons
 \*----------------------------*/
 
+
+
+.primary-btn2 {
+  display: inline-block;
+  padding: 12px 240px;
+  background-color: #0a1527;;
+  border: none;
+  border-radius: 40px;
+  color: #FFF;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+  -webkit-transition: 0.2s all;
+  transition: 0.2s all;
+}
+
+
+
 .primary-btn {
   display: inline-block;
   padding: 12px 30px;
