--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ display: inline-block;
 padding: 6px 10px;
 position: relative;
 bottom: 0px;
-left: 570px;
+left: 970px;
 bottom:   1;
 background-color: #0a1527;;
 border: none;
@@ -160,7 +160,6 @@ text-align: center;
 -webkit-transition: 0.2s all;
 transition: 0.2s all;
 }
-
 
 /*----------------------------*\
   Inputs
@@ -1128,6 +1127,28 @@ textarea.input {
 }
 
 .product-widget .delete {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 14px;
+  width: 14px;
+  text-align: center;
+  font-size: 10px;
+  padding: 0;
+  background: #1e1f29;
+  border: none;
+  color: #FFF;
+}
+
+.textCenterV {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.delete2 {
   position: absolute;
   top: 0;
   left: 0;
