--- a/css/style.css
+++ b/css/style.css
@@ -148,11 +148,10 @@ display: inline-block;
 padding: 6px 10px;
 position: relative;
 bottom: 0px;
-left: 570px;
 bottom:   1;
 background-color: #0a1527;;
 border: none;
-border-radius: 40px;
+border-radius: 50px;
 color: #FFF;
 text-transform: uppercase;
 font-weight: 700;
@@ -1130,6 +1129,21 @@ textarea.input {
 .product-widget .delete {
   position: absolute;
   top: 0;
+  left: 0;
+  height: 14px;
+  width: 14px;
+  text-align: center;
+  font-size: 10px;
+  padding: 0;
+  background: #1e1f29;
+  border: none;
+  color: #FFF;
+}
+
+.delete2 {
+  position: absolute;
+  top: 0;
+  bottom: 0px;
   left: 0;
   height: 14px;
   width: 14px;
